--- a/database/changelog.yaml
+++ b/database/changelog.yaml
@@ -2,4 +2,6 @@ databaseChangeLog:
    - include:
       file: ./database/tableCreates.sql
    - include:
+      file: ./database/tableAlters.sql
+   - include:
       file: ./database/mockData/dummyData.sql
