--- a/planning-web/package.json
+++ b/planning-web/package.json
@@ -1,5 +1,8 @@
 {
   "name": "planning-web",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "private": true,
   "version": "0.0.0",
   "type": "module",
