--- a/planning-web/package.json
+++ b/planning-web/package.json
@@ -11,8 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "amazon-cognito-auth-js": "^1.3.3",
+    "amazon-cognito-identity-js": "^6.3.12",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
@@ -33,10 +37,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-sonarjs": "^0.16.0",
-    "eslint-plugin-unicorn": "^53.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "eslint-plugin-sonarjs": "^0.16.0",
+    "eslint-plugin-unicorn": "^53.0.0",
+    "vite": "^5.2.12"
   }
 }
