replacing roomid with roomuuid

--- a/database/changelog.yaml
+++ b/database/changelog.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: ./database/tableAlters_new.sql
    - include:
       file: ./database/mockData/dummyData_new.sql
+   - include:
+      file: ./database/createTables.sql
